--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup pnpm
         run: |
+          export SHELL=/bin/bash
           curl -fsSL https://get.pnpm.io/install.sh | sh -
-          export PATH=$HOME/.pnpm/global/5/bin:$PATH
+          export PATH="$HOME/.local/share/pnpm:$PATH"
       - uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -20,4 +21,3 @@ jobs:
       - run: pnpm --filter "./client" lint
       - run: pnpm --filter "./server" test
       - run: pnpm --filter "./client" test
-
