--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint .",
-    "seed": "node seeder.js"
+    "seed": "node seeder.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -21,15 +22,20 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.2",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
-    "nodemon": "^3.1.9"
+    "jest": "^29.7.0",
+    "mockingoose": "^2.16.2",
+    "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^8.13.2",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.0"
   }
 }
