fix: vercel config

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -12,8 +12,8 @@
   ],
   "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
