fix: vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,10 @@
   "name": "client",
   "builds": [
     {
-      "src": "package.json",
+      "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "client/dist"
       }
     }
   ],
